--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-    "name": "capturejs",
-    "version": "1.0.0",
-    "devDependencies": {
-        "grunt": "~0.4.0",
-        "grunt-express": "~0.3.6",
-        "grunt-contrib-qunit": "~0.2.0",
-        "grunt-saucelabs": "4.0.4",
-        "grunt-browserify": "~1.3.1",
-        "grunt-contrib-uglify": "~0.2.0"
-    }
+  "name": "capturejs",
+  "version": "1.0.0",
+  "devDependencies": {
+    "grunt": "~0.4.0",
+    "grunt-browserify": "~1.3.1",
+    "grunt-contrib-qunit": "~0.2.0",
+    "grunt-contrib-uglify": "~0.2.0",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-express": "~0.3.6",
+    "grunt-saucelabs": "4.0.4"
+  }
 }
