--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "capturejs",
   "version": "1.0.3",
   "devDependencies": {
+    "ejs": "^2.3.1",
+    "express": "^4.12.4",
     "grunt": "~0.4.0",
     "grunt-browserify": "~1.3.1",
     "grunt-contrib-qunit": "~0.2.0",
