--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "1.0.4",
   "devDependencies": {
     "grunt": "~0.4.0",
+    "grunt-aws-s3": "^0.14.0",
     "grunt-browserify": "~1.3.1",
     "grunt-contrib-qunit": "~0.2.0",
     "grunt-contrib-uglify": "~0.2.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-express": "~0.3.6",
-    "grunt-s3": "0.2.0-alpha.3",
     "grunt-saucelabs": "8.3.2"
   }
 }
