--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "mobify-capturejs",
   "version": "1.0.6",
   "devDependencies": {
+    "browserify": "~3.46.1",
     "grunt": "~0.4.0",
     "grunt-aws-s3": "^0.14.0",
     "grunt-browserify": "~1.3.1",
-    "grunt-contrib-qunit": "~0.2.0",
+    "grunt-cli": "^0.1.13",
+    "grunt-contrib-qunit": "~1.3.0",
     "grunt-contrib-uglify": "~0.2.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-express": "~0.3.6",
     "grunt-saucelabs": "8.3.2"
-  }
+  },
+  "dependencies": {}
 }
