--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mobify-capturejs",
   "version": "1.0.6",
   "devDependencies": {
-    "bower": "^1.8.8",
+    "bower": "~1.8.8",
     "browserify": "~3.46.1",
     "grunt": "~0.4.0",
     "grunt-aws-s3": "^0.14.0",
